# Euler_Problems

./: .envrc  .gitignore  .mcp.json  ADVERSARIAL_TDD_ANALYSIS.md  AGENTS.md  CLAUDE.md  CODEX.md  COPILOT_GUIDELINES.md  GEMINI.md  Natural.php  NaturalSum.php  ORCHESTRATION_UPDATES_PLAN.md  README  programming_languages_TDD_supported.md
.serena/: project.yml
problem11/python/: README.md  pyproject.toml
problem13/python/: large_sum.py  pyproject.toml
problem13/rust/: Cargo.toml
problem13/rust/src/: lib.rs  main.rs
problem14/python/: collatz.py  pyproject.toml  test_collatz.py
problem957/: AI_PANEL_FEEDBACK_ON_DISCOVERY.md  AI_PANEL_OPTIMIZED_PROMPTS.md  ALGEBRAIC_GEOMETRY_RESEARCH.md  BREAKTHROUGH_FRACTION_HYPOTHESIS.md  CAPABILITY_MATRIX.md  COMPLETE_EVIDENCE_SYNTHESIS.md  COMPREHENSIVE_DEADLOCK_ANALYSIS.md  COMPREHENSIVE_SYNTHESIS.md  CRITICAL_INSIGHT_SYMBOLIC_FAILURE.md  CURRENT_STATUS_SYMBOLIC_APPROACH.md  DECISIVE_TEST_RESULTS.md  DEG ENERACY_BREAKTHROUGH_SUMMARY.md  DEGREE_GROWTH_DISCOVERY.md  DETERMINISTIC_APPROACH_SYNTHESIS.md  DIMENSIONAL_BREAKTHROUGH.md  DUALITY_CHECK.md  EXTENDING_TO_LARGE_N.md  FINAL_ANALYSIS.md  FINAL_HANDOFF_MATHEMATICAL_BARRIER.md  FINAL_RESULTS.md  FINAL_SYNTHESIS.md  FORMAL_PROOF.md  FORMULA_READABLE.md  HANDOFF_AI_PANEL_INSIGHT.md  HANDOFF_MULTIPLICITY_ANALYSIS.md  HILBERT_CURVE_FINDINGS.md  HILBERT_LOCALITY_DISCOVERY.md  HIRZEBRUCH_ANALYSIS_FINDINGS.md  IMPLEMENTATION_PLAN.md  KAPPA_ANALYSIS.md  KAPPA_PREDICTION_REFINED.md  KAPPA_REFINEMENT_CORRECTED.md  LINGUISTIC_ANALYSIS_ALL_INTERPRETATIONS.md  MATHEMATICAL_PROOF.md  MAUDE_SETUP.md  MEMORY_FAILED_ATTEMPTS.md  OEIS_A189191.md  POINT_GENESIS_SOLUTION.md  PROBLEM_STATEMENT.txt  PROMPT1_RESULTS.md  (+191 more)
problem957/.ipynb_checkpoints/: problem957-checkpoint.ipynb
problem957/.serena/: project.yml
problem957/.serena/memories/: attempted_solutions.md  candidate_answers.md  project_overview.md  suggested_commands.md
problem957/archive/configuration_searches/: config_search.py  exhaustive_search.py  rapid_config_search.py  research_arithmetic_meaning.py  search_optimal_config.py  simulate_found_config.py  test_hyperbola_config.py  unconstrained_search.py
problem957/archive/crisis_docs/: CRISIS_ANALYSIS.md  (+1 more)
problem957/requirements/: requirements.md
problem957/src/: geometry.py  propagation.py  visualization.py
problem957/tests/: test_geometry.py  test_multiday_simulation.py  test_propagation.py  test_visualization_controls.py  test_visualization_data.py  test_visualization_rendering.py  test_visualization_state.py
(+768 files in other folders)
