[project]
name = "problem957"
version = "0.1.0"
description = "Project Euler Problem 957 - Geometric Invariants"
authors = [
    {name = "Ketema Harris",email = "ketema@ketema.net"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "networkx (>=3.5,<4.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "geometer (>=0.4.2,<0.5.0)",
    "casadi (>=3.7.2,<4.0.0)",
    "pymbolic (>=2025.1,<2026.0)",
    "oeis (>=2023.3.10,<2024.0.0)",
    "z3-solver (>=4.15.4.0,<5.0.0.0)",
    "pysr (>=1.5.9,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
