[project]
name = "problem11-python"
version = "0.1.0"
description = "Project Euler Problem 11 - Python"
authors = [
    {name = "Ketema Harris",email = "ketema@ketema.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

