[package]
name = "large_sum"
version = "0.1.0"
edition = "2024"
authors = ["Ketema Harris <ketema@ketema.net>"]
description = "Project Euler Problem 13: Large Sum - Rust implementation"

[dependencies]
num-bigint = "0.4"

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "large_sum_benchmark"
harness = false
