[tool.poetry]
name = "euler-problem-14"
version = "1.0.0"
description = "Project Euler Problem 14: Longest Collatz Sequence"
authors = ["Euler Solutions"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
